# functional-programming

./: README.md
lab1/: lab1.cabal  package.yaml  stack.yaml
lab1/app/: Main.hs
lab1/src/: Utils.hs
lab1/src/Entities/: Competition.hs  Instructor.hs  Section.hs  SectionInstructor.hs  SectionLesson.hs  SectionStudent.hs  Student.hs
lab1/src/Menus/: CompetitionMenu.hs  InstructorMenu.hs  MainMenu.hs  SectionMenu.hs  StudentMenu.hs
lab2/: lab2.cabal
lab2/app/: Main.hs
tasks/task1/: CHANGELOG.md  package.yaml  task1.cabal
tasks/task1/app/: Main.hs
tasks/task1/src/: Lib.hs
